//
//  PlatformButtonView.swift
//  CommonViewsKit
//
//  Created by Buğrahan Efe on 10.09.2024.
//

import SwiftUI

private enum Constant {
    static let gamingPlatforms: [(name: String, index: Int)] = [
        ("PC", 1),
        ("PlayStation", 2),
        ("Xbox", 3),
        ("iOS", 4),
        ("Apple Macintosh", 5),
        ("Linux", 6),
        ("Nintendo", 7),
        ("Android", 8),
        ("Atari", 9),
        ("Commodore / Amiga", 10),
        ("SEGA", 11),
        ("3DO", 12),
        ("Neo Geo", 13),
        ("Web", 14)
    ]
}

public struct PlatformButtonView: View {
    @State private var selectedPlatform: Int? = nil
    public var buttonAction: (Int?) -> Void
    
    public init(buttonAction: @escaping (Int?) -> Void) {
        self.buttonAction = buttonAction
    }
    
    public var body: some View {
        ScrollView(.horizontal, showsIndicators: false) {
            HStack(spacing: 10) {
                ForEach(Constant.gamingPlatforms, id: \.index) { platform in
                    PlatformButton(
                        isSelected: Binding<Bool>(
                            get: { selectedPlatform == platform.index },
                            set: { isSelected in
                                selectedPlatform = isSelected ? platform.index : nil
                                buttonAction(selectedPlatform)
                            }
                        ),
                        name: platform.name,
                        fontSize: 14,
                        height: 17,
                        cellRadius: 15,
                        defaultColor: .white
                    ) {
                        if selectedPlatform == platform.index {
                            selectedPlatform = nil
                        } else {
                            selectedPlatform = platform.index
                        }
                        buttonAction(selectedPlatform)
                    }
                }
            }
            .frame(height: 60)
            .padding(.horizontal, 10)
        }
        .background(.black)
    }
}
