...
    func showResponseNilLabel()
    func hideResponseNilLabel()
}

private enum Constant {    
    enum NavigationBar {
        static let title = "Games"
        static let titleFont = 16.0
        static let AppearanceButtonSize = CGSize(width: 24, height: 24)
    }
    enum SearchBar {
        static let Placeholder = "Search"
        static let Font = UIFont.systemFont(ofSize: 14.0)
    }
}

final class HomeModuleViewController: BaseViewController {
    @IBOutlet private weak var collectionView: UICollectionView!
...
