...
    func setFavoriteButtonImage(isSelected: Bool)
    func updateDescriptionHeight(to height: CGFloat?)
}

private enum Constant {
    enum NavigationBar {
        static let title: String = "Game Detail"
        static let titleFont: CGFloat = 16.0
    }
    enum RatingThresholds {
        static let Green = 75
        static let Orange = 50
        static let CornerRadius = 3.0
...
